Changes since CPAchecker 1.6.1
------------------------------
* The predicate analysis now uses an improved encoding of heap memory
  that is more precise.
* The HTML report has been updated and is now produced directly by CPAchecker
  (no need to call report-generator.py anymore).
* CPAchecker requires Java 8.


Changes from CPAchecker 1.6 to CPAchecker 1.6.1
-----------------------------------------------
* Important bug fix for all configurations that use a sequential combination
  of analyses, for the example the -sv-comp16 configuration
  (internal time limits were not handled correctly).


Changes from CPAchecker 1.4 to CPAchecker 1.6
---------------------------------------------
* Local Policy Iteration
  A new analysis has been added to CPAchecker
  that derives numerical invariants from linear templates
  with policy iteration in an efficient manner.

* Formula Slicing Analysis
  A new analysis was developed for CPAchecker that derives inductive invariants
  from loop-free traces from the analyzed program.

* Refinement Selection
  The value analysis and the predicate analysis can now use
  refinement selection for choosing well-suited ways to refine
  the analysis for an infeasible counterexample.

* Symbolic Execution
  CPAchecker now supports symbolic execution
  by enhancing the value analysis to not only track explicit,
  but also symbolic values.

* Improved Heap Support for Predicate Analysis
  The predicate analysis now supports a heap analysis
  with unbounded memory regions by using the SMT theory of arrays.
  This can be enabled with cpa.predicate.handleHeapArray=true.

* Concurrency Support
  CPAchecker now supports the analysis of concurrent programs
  with a limited number of threads
  by using value analysis or BDD-based analysis.

* Witness Export and Validation
  After an analysis, CPAchecker exports witnesses
  that contain information about found counterexamples or correctness-proofs.
  The format of the witnesses is standardized and 