@@ -22,6 +22,3 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.fu
 [cpa.predicate]
     encodeFloatAs = FLOAT
     encodeBitvectorAs = BITVECTOR
-
-[]
-solver.solver = MATHSAT5
