@@ -18,6 +18,3 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.fu
 
 [cpa.callstack]
     depth = 1
-
-[]
-solver.solver = MATHSAT5
