@@ -13,9 +13,6 @@ maxLoopIterationAdjusterFactory = INCREMENT
 induction = true
 invariantGenerationStrategy = REACHED_SET
 
-[solver]
-solver = smtinterpol
-
 [cpa.predicate]
 encodeFloatAs = RATIONAL
 
