@@ -7,6 +7,9 @@
 
 #include kInduction.properties
 
-// provide additional automatically generated invariants to the induction proof;
-// this requires a solver that can be used concurrently, e.g. SMTInterpol (which is the default)
+// provide additional automatically generated invariants to the induction proof
 bmc.invariantGenerationStrategy = INDUCTION
+
+# Current MathSAT is not re-entrant, so running two k-induction procedures
+# at the same time is not supported, we need another solver for this.
+solver.solver = SMTInterpol
