@@ -9,7 +9,6 @@
 limits.time.cpu =
 
 # Enable bit-precise analysis
-solver.solver=MATHSAT5
 cpa.predicate.encodeBitvectorAs=BITVECTOR
 cpa.predicate.encodeFloatAs=FLOAT
 
