@@ -8,9 +8,6 @@
 // as an auxiliary invariant generator
 bmc.invariantGenerationStrategy = REACHED_SET
 
-// MathSAT is the only SMT solver that supports Bitvectors+Floats
-solver.solver = MathSAT5
-
 // Use bitvectors in formulas instead of real variables.
 cpa.predicate.encodeBitvectorAs = BITVECTOR
 
