@@ -1,8 +1,5 @@
 // This file contains all the necessary options to make an existing PredicateCPA bitprecise.
 
-// MathSAT is the only SMT solver that supports Bitvectors+Floats
-solver.solver = MathSAT5
-
 // Use bitvectors in formulas instead of real variables.
 cpa.predicate.encodeBitvectorAs = BITVECTOR
 
