@@ -10,8 +10,6 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.fu
 
 cpa.value.symbolic.useSymbolicValues = true
 
-# Use MathSAT5 for use of bitvector theory
-solver.solver = MathSAT5
 cpa.predicate.encodeBitvectorAs = Bitvector
 cpa.predicate.encodeFloatAs = Float
 
