@@ -50,6 +50,7 @@ cpa.functionpointer.ignoreUnknownFunctionPointerCalls=true
 # (Conflicting PredicateCPA and FunctionPointerCPA with ignoreUnknownFunctionPointerCalls heuristic)
 cpa.predicate.trackFunctionPointers=false
 
+solver.solver = SMTInterpol
 cpa.predicate.useArraysForHeap = false
 cpa.predicate.defaultArrayLength = 1
 cpa.predicate.maxArrayLength = 1
