@@ -6,7 +6,7 @@ analysis.algorithm.CEGAR = true
 refiner=cpa.policyiteration.PolicyInterpolationRefiner
 
 [solver]
-interpolationSolver=smtinterpol
+interpolationSolver=mathsat5
 
 [precision.template]
 generateDifferences=false
