@@ -1,6 +1,5 @@
 #include predicateAnalysis.properties
 
-solver.solver = MATHSAT5
 cpa.predicate.blk.alwaysAtExplicitNodes = true
 
 custominstructions.requirementsStateClassName = org.sosy_lab.cpachecker.cpa.predicate.PredicateAbstractState
