@@ -14,10 +14,9 @@ cegar.refiner = cpa.predicate.BAMPredicateRefiner
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.BAMPredicateCPA
 
-solver.solver=SMTINTERPOL
-
 # strategy is very important for recursion!
-cpa.predicate.refinement.strategy = tree
+# MathSAT5 does not support the "tree" strategy
+cpa.predicate.refinement.strategy = tree_nested
 
 # use additional symbols, needed for tree-interpolation (for some solvers)
 cpa.predicate.useParameterVariables = true
