@@ -35,5 +35,3 @@ cpa.interval.merge = JOIN
 
 # set resource limits
 limits.time.cpu = 900s
-
-solver.solver=MATHSAT5
