@@ -14,5 +14,4 @@ CompositeCPA.cpas = cpa.location.LocationCPA,cpa.callstack.CallstackCPA,cpa.valu
 # use this option to avoid stackoverflow in some cases, unsound analysis!
 cpa.bam.maximalDepthForExplicitRecursion=30
 
-solver.solver=MATHSAT5
 cpa.predicate.refinement.strategy = tree_nested
