@@ -2,6 +2,10 @@ Changes since CPAchecker 1.6.1
 ------------------------------
 * The predicate analysis now uses an improved encoding of heap memory
   that is more precise.
+  The default SMT solver is now MathSAT5, for which only a Linux binary is bundled.
+  Additional binaries are available from the MathSAT homepage: http://mathsat.fbk.eu/
+  Please note that the bundled license of MathSAT permits
+  only research and evaluation purposes.
 * The HTML report has been updated and is now produced directly by CPAchecker
   (no need to call report-generator.py anymore).
 * CPAchecker requires Java 8.
